# python_api

./: .coveragerc  .env  .gitignore  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODING_STANDARD.md  LICENSE  PYTHON_SUPPORT.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yml  test-build-publish.yml
.travis/: install
domaintools/: __init__.py  _version.py  api.py  base_results.py  cli.py  cli_click.py  cli_typer.py  constants.py  decorators.py  docstring_patcher.py  exceptions.py  filters.py  request_validator.py  results.py  utils.py
domaintools/cli/: __init__.py  api.py  constants.py  main.py  utils.py
domaintools/cli/commands/: __init__.py  accounts.py  detects.py  domains.py  feeds.py  ips.py  iris.py  phisheye.py
domaintools/specs/: iris-openapi.yaml
domaintools_async/: __init__.py
examples/: basic_usage.py  iris_detect_workflow.py  iris_investigate_filter_output.py  iris_investigate_pivot_ns_host.py  relative_time_inputs.py  retrieving_all_results_in_paginated_return.py
requirements/: common.txt  development.txt
tests/: conftest.py  settings.py  test_api.py  test_async.py  test_cli.py  test_decorators.py  test_docstring_patcher.py  test_filters.py  test_request_validator.py  test_utils.py
tests/e2e/: test_proxy.py  test_ssl.py
tests/e2e/scripts/: cleanup_e2e.sh  setup_e2e.sh  test_e2e_runner.sh
tests/fixtures/vcr/: test_account_information.yaml  test_async_context_manager.yaml  test_async_iteration.yaml  test_async_simple_await.yaml  test_async_simple_await_patch.yaml  test_async_simple_await_post.yaml  test_available_api_calls.yaml  test_brand_monitor.yaml  test_dict_like_behaviour.yaml  test_domain_discovery_feed.yaml  test_domain_hotlist.yaml  test_domain_profile.yaml  test_domain_search.yaml  test_domain_suggestions.yaml  test_domainrdap_feed.yaml  test_domainrdap_feed_not_api_header_auth.yaml  test_exception_handling.yaml  test_feeds_endpoint_should_non_header_auth_be_the_default.yaml  test_formats.yaml  test_host_domains.yaml  test_hosting_history.yaml  test_ip_monitor.yaml  test_ip_registrant_monitor.yaml  test_iris.yaml  test_iris_detect_escalate_domains.yaml  test_iris_detect_ignored_domains.yaml  test_iris_detect_manage_watchlist_domains.yaml  test_iris_detect_monitors.yaml  test_iris_detect_new_domains.yaml  test_iris_detect_watched_domains.yaml  test_iris_enrich.yaml  test_iris_enrich_cli.yaml  test_iris_investigate.yaml  test_limit_exceeded.yaml  test_list_like_behaviour.yaml  test_name_server_monitor.yaml  test_newly_active_domains_feed.yaml  test_newly_observed_domains_feed.yaml  test_newly_observed_domains_feed_pagination.yaml  test_newly_observed_hosts_feed.yaml  (+17 more)
tests/responses/: expected_data.py  iris_investage_data.py  iris_investigate_data.py
