[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "domaintools_api"
dependencies = [
    "httpx==0.28.1",
    "pyyaml",
    "rich",
    "typer"
]
requires-python = ">= 3.9"
authors = [{ name = "DomainTools", email = "integrations@domaintools.com" }]
description = "DomainTools Official Python API"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Python", "Python3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/domaintools/python_api"


[project.scripts]
domaintools = "domaintools.cli:run"

[project.optional-dependencies]
test = ["pytest", "mock"]

[tool.setuptools]
packages = [
    "domaintools",
    "domaintools.cli",
    "domaintools.cli.commands",
    "domaintools_async",
]
include-package-data = true

[tool.setuptools.package-data]
domaintools = ["specs/*.yaml"]

[tool.setuptools.dynamic]
version = { "file" = "VERSION" }

[tool.black]
line-length = 110
